# SDL-test-cpp

./: CMakeLists.txt  main.cpp
Classes/Checks/: checks.cpp  checks.h
Classes/Controls/: controls.cpp  controls.h
Classes/Window/: Window.cpp  Window.h
